<resources>
    <string name="app_name" translatable="false">Multinet</string>
    <string name="logo" translatable="false">Logo</string>

    <string name="username">Gebruikersnaam</string>
    <string name="password">Wachtwoord</string>
    <!--Landing Page Bottom Navigation Items-->
    <string name="landing_page_nav_menu_home">Home</string>
    <string name="landing_page_nav_menu_challenges">Challenges</string>
    <string name="landing_page_nav_menu_info">Info</string>
    <string name="landing_page_nav_menu_profile">Profiel</string>
    <!--Login-->
    <string name="login_title">Aanmelden</string>
    <string name="login_welcome">Welkom bij Multinet</string>
    <string name="login_username_required">Gebruikersnaam is verplicht</string>
    <string name="login_password_required">Wachtwoord is verplicht</string>
    <!--Home-->
    <string name="home_title">Home</string>
    <string name="home_next_reward_at">Volgende Beloning op niveau %1$d</string>
...
    <string name="profile_company">Bedrijf</string>
    <string name="profile_user_info">Gegevens</string>
    <string name="profile_contact">Therapeuten</string>
    <string name="Update_profile_button">Aanpassen</string>
    <string name="profile_contract_date_format">%1d-%2d-%3d</string>
    <string name="profile_contract_date_invalid">Ongeldige Contract Datum</string>
    <string name="profile_contract_date_expired">Contract Is Verlopen</string>

    <!--Update Profile-->
    <string name="update_profile_title">Profiel aanpassen</string>
    <string name="update_profile_header_label">Gegevens Aanpassen</string>
    <string name="update_profile_firstname_required">Voornaam is verplicht</string>
    <string name="update_profile_firstname_minlength">Voornaam is minstens %1d karakters lang</string>
...
    <!--Challenges-->
    <string name="challenges_title">Challenges</string>
    <!--Info-->
    <string name="info_title">Info</string>

    <!--Network-->
    <string name="dialog_enable_wireless_title">Wifi inschakelen</string>
    <string name="dialog_enable_wireless_continue">Ga naar instellingen</string>
    <string name="dialog_cancel">Annuleren</string>
    <string name="dialog_enable_wireless_description">U hebt geen verbinding. Wifi aanzetten via instelligen?</string>
    <string name="dialog_ok">OK</string>
    <string name="offline">Offline</string>
    <string name="network_unavailable">Netwerk onbereikbaar</string>
    <string name="login_io_exception">Login mislukt, probeer later nog eens</string>

    <!--Retrofit Error-->
    <string name="generic_error">Er liep iets fout</string>
    <string name="login_invalid">Login ongeldig</string>
    <string name="complete_challenge">Uitdaging voltooien</string>
    <string name="userError">Kon uw details niet ophalen</string>
    <string name="therapistError">Kon uw therapeuten niet ophalen</string>
    <string name="challengeError">Kon uw uitdagingen niet ophalen</string>
    <string name="leaderboardError">Kon uw leaderboard niet ophalen</string>
    <string name="completeChallengeError">Kon de uitdaging niet voltooien</string>

    <!-- Complete Challenge -->
...
