...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in"
            app:errorEnabled="true"
            app:error="@{loginViewModel.getUsernameError()}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                android:text="@={loginViewModel.username}"/>
        </com.google.android.material.textfield.TextInputLayout>
...
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:error="@{loginViewModel.getPasswordError()}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={loginViewModel.password}"/>
        </com.google.android.material.textfield.TextInputLayout>
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:visibility="@{loginViewModel.busy ? View.GONE : View.VISIBLE }"
                app:backgroundTint="@color/multimed_green"
                app:layout_constraintBottom_toBottomOf="parent"
...
